# chaone-learn

./: .gitignore  ARCHITECTURE.md  CLAUDE.md  CONTEXT.md  DESIGN-SYSTEM.md  LESSONS.md  PHILOSOPHY.md  TECH_STACK.md  WORLD.md  drizzle.config.ts  learn  package-lock.json  package.json  vitest.config.ts
Docs/data_structure/: 01_lesson_data_shape.md
Docs/plans/: 01_early_slices.md  02_moves_and_branching.md  03_seed_and_stub.md
Plans/: ARCHITECTURE.md  BONES.md  DESIGN-SYSTEM.md  HANBUN.md
app/: README.md  package-lock.json  package.json  svelte.config.js
app/drizzle/: 0000_sturdy_luke_cage.sql  0001_flat_captain_marvel.sql  0002_flippant_roulette.sql
app/scripts/: seed.ts
chaone-learn/: package.json
docs/: prd-lesson-1-mvp.md
docs/adr/: 0001-flat-schema-over-eav.md
docs/agents/: domain.md
hanbun/: README.md  pyproject.toml  try_story.py
hanbun/examples/: My_Mister_episode_1.srt  beginner-story.txt  inspect_token.py  intermediate-story.txt  srt_mixed.py  story_reader.py
hanbun/examples/lists/: 1-5000_freq.csv  README.md
hanbun/src/hanbun/: __init__.py  analyzer.py  lists.py  render.py  tokenize.py
hanbun/tests/: test_analyzer.py  test_lists.py  test_render.py  test_tokenize.py
hanbun/tests/fixtures/: small_freq.csv  small_vocab.yaml
mock-html/: home.html  index.html  lesson.html  reader.html
mock-html/css/: base.css  components.css  pages.css  tokens.css
mock-html/js/: demo.js
old_plans/: TECH_STACK.md
old_plans/plans/: 01_early_slices.md  02_5_realignment.md  03_seed_and_stub.md
src/lib/: types.ts
subtitles/: srt_ai_mixed.py
(+179 files in other folders)
